# Misc-Code-Projects

./: .gitignore
Business/: Business.sln
Business/Business/: Business.vcxproj  Business.vcxproj.filters  main.cpp
ClassUtilities/: class_utils.h
ClassUtilities/Examples/: Person.cpp  Person.h  main.cpp
Connect4/: Connect4.sln
Connect4/Connect4/: Board.h  Connect4.vcxproj  Connect4.vcxproj.filters  Game.h  main.cpp
Cuda/BankConflictTest/: BankConflictTest.sln
Cuda/Exponential-Cuda/: Exponential-Cuda.sln
Cuda/HelloWorld/: HelloWorld.sln
Cuda/NearestNeighbour/: NearestNeighbour.sln
Cuda/ObjDetection/: ObjDetection.sln
CustomEncryption/: CustomEncryption.sln
DekkerDouble/: DekkerDouble.sln
DigitalWardrobe/: DigitalWardrobe.sln
Enigma-Implementation/: Enigma-Implementation.sln
ExpenseTracker/: ExpenseTracker.sln
FibEncryption/: FibEncryption.sln
Fibonacci/: Fibonacci.sln
FootbalProj/: FootbalProj.sln
Football/: README.MD
GameStoreManagementSystem/: GameStoreManagementSystem.sln
J-Cipher/: J-Cipher.sln
J-Encrypter/: J-Encrypter.sln
NumberScrambler/: NumberScrambler.sln
OutfitCombinations-CMD/: OutfitCombinations-CMD.sln
PerfectForwarding/: PerfectForwarding.sln
PrimeNumbers/: PrimeNumbers.sln
RangePercent/: main.cpp  main.ilk
Sales/: Sales.sln
TestDLL/: TestDLL.sln
TestDLL-Implementation/: TestDLL-Implementation.sln
TicTacToe/: TicTacToe.sln
TournamentTracker/: TournamentTracker.sln
Utils/: dynamic_array2d.hpp
n-highest/: n-highest.sln
ocvGPUtest/: CMakeLists.txt  main.cpp
todo-list/: todo-list.sln
(+1398 files in other folders)
